--- a/css/estilos.css
+++ b/css/estilos.css
@@ -311,6 +311,71 @@ lottie-player {
 	  font-size: 12px;
 }
 
+
+/* ----- ----- activar----- ----- */
+
+.activar {
+	text-align: center;
+	display: none;
+	background-color: #ffffffae;
+	border-radius: 20px;
+
+}
+
+.activar img {
+	width: 10%;
+}
+.activar p {
+	font-size: 12px;
+	text-align: left;
+	margin: 0px 10px;
+	font-weight: bold;
+}
+
+.activar h5 {
+	margin: 5px 10px;
+	text-align: left;
+	color: #080077;
+}
+
+.activar ul li {
+	text-align: left;
+	font-size: 12px;
+	font-weight: bold;
+	list-style-type: none;
+	margin: 8px 10px;
+
+
+}
+
+.activar .r {
+	color: #0028db;
+}
+
+.activar .r:hover{
+	font-size: 13px;
+	color: #1bf807;
+}
+
+.activar  .ratras {
+	text-decoration: none;
+	display:block;
+	background:  linear-gradient(102deg, #0998f7 40%, #0867ff8f 60%);
+	color: #ffffff;
+	margin: 15px 15%;
+	padding: 5px 5px;
+    border-radius:5px ;
+	font-size: 12px;
+	box-shadow: 1px 1px 5px #020000c4;
+	
+}
+
+.activar  .ratras:hover{
+	background: #ffffff;
+	color: #115ae2;
+
+}
+
 /* ----- ----- recargas----- ----- */
 
 .recarga {
